# 20232-team-16

./: README.md  README.txt
Projeto_Final/: Cartao.cpp  Conta.cpp  ContaCompartilhada.cpp  ContaCompartilhada.h  Despesa.h  Funcionalidade.h  Investimento.cpp  Investimento.h  Notificacao.cpp  Notificacao.h  Objetivo.cpp  Objetivo.h  Receita.cpp  Receita.h  Relatorio.h  Sistema.cpp  Transacao.cpp  Transacao.h  Transferencia.h  Usuario.cpp  Usuario.h  main.cpp
Projeto_Final_Prototipo/: Cartao.h  Categoria.cpp  Categoria.h  Conta.h  Despesa.cpp  Emprestimo.h  Funcionalidade.cpp  Sistema.h  Transferencia.cpp
Projeto_Final_Qt/: CMakeLists.txt  cadastro.cpp  cadastro.h  cadastro.ui  contacadastro.cpp  contacadastro.h  contacadastro.ui  janelaconta.cpp  janelaconta.h  janelaconta.ui  janeladespesa.cpp  janeladespesa.h  janeladespesa.ui  janelaobjetivo.cpp  janelaobjetivo.h  janelaobjetivo.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  receitajanela.cpp  receitajanela.h  receitajanela.ui  usuario_dados.cpp  usuario_dados.h  usuariowindow.cpp  usuariowindow.h  usuariowindow.ui
Projeto_Final_Qt/feitos/: Cartao.cpp  Cartao.h  Conta.cpp  Conta.h  Despesa.cpp  Despesa.h  Emprestimo.cpp  Funcionalidade.cpp  Funcionalidade.h  Objetivo.cpp  Objetivo.h  ObjetivoReceita.cpp  ObjetivoReceita.h  Receita.cpp  Receita.h  Sistema.cpp  Sistema.h  Transacao.cpp  Transacao.h  Transferencia.cpp  Transferencia.h  Usuario.cpp  Usuario.h  objetivodespesa.cpp  objetivodespesa.h  objetivoif.cpp  objetivoif.h
build-Projeto_Final_Qt-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Projeto_Final_Qt-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-34693d3bab658abd6150.json  (+9 more)
build-Projeto_Final_Qt-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Projeto_Final_Qt-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Projeto_Final_Qt-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/Projeto_Final_Qt_autogen/: deps  mocs_compilation.cpp
build-Projeto_Final_Qt-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/Projeto_Final_Qt_autogen/EWIEGA46WW/: moc_cadastro.cpp  moc_cadastro.cpp.d  moc_contacadastro.cpp.d  moc_janelaconta.cpp  moc_janelaconta.cpp.d  moc_janeladespesa.cpp.d  moc_janelaobjetivo.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_receitajanela.cpp.d  moc_usuariowindow.cpp  moc_usuariowindow.cpp.d
build-Projeto_Final_Qt-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/Projeto_Final_Qt_autogen/include/: ui_janeladespesa.h  ui_janelaobjetivo.h  ui_usuariowindow.h
build-Projeto_Final_Qt-Desktop_Qt_6_6_1_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Projeto_Final_Qt-Desktop_Qt_6_6_1_MinGW_64_bit-Release/.qt/: QtDeploySupport.cmake
build-Projeto_Final_Qt-Desktop_Qt_6_6_1_MinGW_64_bit-Release/.qtc_clangd/: compile_commands.json
build-Projeto_Final_Qt-Desktop_Qt_6_6_1_MinGW_64_bit-Release/Projeto_Final_Qt_autogen/: deps
build-Projeto_Final_Qt-Desktop_Qt_6_6_1_MinGW_64_bit-Release/Projeto_Final_Qt_autogen/EWIEGA46WW/: moc_cadastro.cpp.d  moc_contacadastro.cpp  moc_contacadastro.cpp.d  moc_janelaconta.cpp.d  moc_janeladespesa.cpp  moc_janeladespesa.cpp.d  moc_janelaobjetivo.cpp  moc_janelaobjetivo.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_receitajanela.cpp  moc_receitajanela.cpp.d  moc_usuariowindow.cpp  moc_usuariowindow.cpp.d
build-Projeto_Final_Qt-Desktop_Qt_6_6_1_MinGW_64_bit-Release/Projeto_Final_Qt_autogen/include/: ui_cadastro.h  ui_contacadastro.h  ui_janelaconta.h  ui_mainwindow.h  ui_receitajanela.h  ui_usuariowindow.h
(+137 files in other folders)
